Removed a bunch of stuff we don't need for PCRS.
We are diverging from the main project now, so we don't need backward
compatibility.

--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
 	</target>
 
 	<path id="master-classpath">
-		<pathelement location="cp/javax.json-1.0.jar" />
+		<pathelement location="jar/javax.json-1.0.jar" />
 		<pathelement location="java/lib/tools.jar" />
 		<pathelement location="build" />
 	</path>
