--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 
 	<target name="build">
 		<mkdir dir="build" />
-		<javac srcdir="cp" destdir="build" debug="true" executable="java/bin/javac">
+		<javac srcdir="src" destdir="build" debug="true" executable="java/bin/javac">
 			<classpath refid="master-classpath" />
 		</javac>
 	</target>
